build: add Java 25 vector runtime flags
Add chat-vector-embedded as the narrow Vector API flag target.

Add deploy native access flags for Java 25 runtime warnings.

Bind RSocket index query payloads to concrete query types.

Issue: CHAT-eroapfub